--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
       <ion-list>
         <ion-item [routerLink]="{'/sevicios'}">SERVICIOS</ion-item>
         <ion-item [routerLink]="{'/noticia'}">NOTICIA</ion-item>
-        
+        <ion-item [routerLink]="{'/home'}">INICIO</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
