--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,6 +2,9 @@
 
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button autoHide="false"></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Blank
     </ion-title>
